# nuwa-ppt-generation

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
demo-official-smoke/: README.md  design_spec.md  spec_lock.md
demo-official-smoke/exports/: official_smoke_20260630_234006.pptx
demo-official-smoke/notes/: slide_01_cover.md  slide_02_pipeline.md  slide_03_motion.md  slide_04_quality.md  slide_05_close.md  total.md
demo-quick-gif/: README.md  design_spec.md  spec_lock.md
demo-quick-gif/exports/: skill_patch_test_20260630_235721.pptx
demo-quick-gif/notes/: 01_quick_mode_gif.md  total.md
skills/productivity/ppt-master/: SKILL.md
skills/productivity/ppt-master/references/: strategist.md
skills/productivity/ppt-master/scripts/: analyze_images.py  archive_security.py  batch_validate.py  check_latest_version.py  config.py  finalize_svg.py  image_gen.py  native_narration_pptx.py  network_security.py  notes_to_audio.py  rotate_images.py  server_common.py  skill_version.py  svg_position_calculator.py  svg_quality_checker.py  total_md_split.py  verify_pptx_export.py
skills/productivity/ppt-master/scripts/confirm_ui/: server.py
skills/productivity/ppt-master/scripts/docs/: conversion.md  image.md  project.md  svg-pipeline.md  update_spec.md
skills/productivity/ppt-master/scripts/image_backends/: backend_gemini.py  backend_openai.py  backend_openrouter.py
skills/productivity/ppt-master/scripts/pptx_to_svg/: color_resolver.py  effect_to_svg.py  ln_to_svg.py  ooxml_loader.py  pic_to_svg.py
skills/productivity/ppt-master/scripts/source_to_md/: doc_to_md.py  pdf_to_md.py  ppt_to_md.py  web_to_md.py
skills/productivity/ppt-master/scripts/svg_editor/: server.py
skills/productivity/ppt-master/scripts/svg_finalize/: align_embed_images.py  crop_images.py  embed_icons.py  fix_image_aspect.py  svg_rect_to_path.py
skills/productivity/ppt-master/scripts/svg_to_pptx/: drawingml_elements.py  drawingml_paths.py  pptx_builder.py  pptx_cli.py
skills/productivity/ppt-master/scripts/template_fill_pptx/: analyzer.py  applier.py  chart_fill.py
skills/productivity/ppt-master/scripts/template_import/: manifest.py
skills/productivity/ppt-master/templates/brands/: README.md  brands_index.json
skills/productivity/ppt-master/templates/brands/dashi_theme01/: design_spec.md
skills/productivity/ppt-master/templates/brands/dashi_theme02/: design_spec.md
skills/productivity/ppt-master/templates/brands/dashi_theme03/: design_spec.md
skills/productivity/ppt-master/templates/brands/dashi_theme04/: design_spec.md
skills/productivity/ppt-master/templates/brands/dashi_theme05/: design_spec.md
skills/productivity/ppt-master/templates/brands/dashi_theme06/: design_spec.md
skills/productivity/ppt-master/templates/brands/dashi_theme07/: design_spec.md
skills/productivity/ppt-master/templates/brands/dashi_theme08/: design_spec.md
skills/productivity/ppt-master/templates/brands/dashi_theme09/: design_spec.md
skills/productivity/ppt-master/templates/brands/dashi_theme10/: design_spec.md
skills/productivity/ppt-master/templates/brands/dashi_theme11/: design_spec.md
skills/productivity/ppt-master/templates/brands/dashi_theme12/: design_spec.md
skills/productivity/ppt-master/templates/decks/: README.md
skills/productivity/ppt-master/templates/layouts/: README.md
skills/productivity/ppt-master/workflows/: create-template.md
src/nuwa_ppt/: __init__.py  cli.py
tests/: test_archive_security.py  test_cli.py  test_config_security.py  test_doc_security.py  test_local_server_security.py  test_network_security.py  test_package_metadata.py  test_web_security.py
